syntax = "proto3";

package sonm;

import "insonmnia.proto";

enum DealStatus {
    ANY_STATUS = 0;
    PENDING = 1;
    ACCEPTED = 2;
    CLOSED = 3;
}

message Deal {
    string id = 1;
    string BuyerID = 2;
    string SuppclierID = 3;
    DealStatus status = 4;

    int64 price = 5;
    Timestamp startTime = 6;
    Timestamp endTime = 7;
}
